# mc-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  test_motd.py  udp_proxy.py
.github/workflows/: ci.yml
crates/mc-rs-behavior-pack/: Cargo.toml
crates/mc-rs-behavior-pack/src/: block.rs  entity.rs  item.rs  lib.rs  loader.rs  loot_table.rs  manifest.rs  recipe.rs
crates/mc-rs-command/: Cargo.toml
crates/mc-rs-command/src/: lib.rs  selector.rs
crates/mc-rs-crypto/: Cargo.toml
crates/mc-rs-crypto/src/: aes.rs  ecdh.rs  jwt_sign.rs  key_derive.rs  lib.rs
crates/mc-rs-game/: Cargo.toml
crates/mc-rs-game/src/: anvil.rs  block_entity.rs  breeding.rs  combat.rs  components.rs  enchanting.rs  food.rs  game_world.rs  grindstone.rs  inventory.rs  lib.rs  loom.rs  mob_registry.rs  projectile.rs  recipe.rs  smelting.rs  xp.rs
crates/mc-rs-game/src/ai/: behavior.rs  behaviors.rs  brain.rs  mob_behaviors.rs  mod.rs  pathfinding.rs  spatial.rs  spawning.rs  system.rs
crates/mc-rs-nbt/: Cargo.toml
crates/mc-rs-nbt/src/: error.rs  io.rs  le.rs  lib.rs  network.rs  tag.rs
crates/mc-rs-plugin-api/: Cargo.toml
crates/mc-rs-plugin-api/src/: lib.rs
crates/mc-rs-plugin-lua/: Cargo.toml
crates/mc-rs-plugin-lua/src/: lib.rs  manifest.rs
crates/mc-rs-plugin-wasm/: Cargo.toml
crates/mc-rs-plugin-wasm/src/: host_functions.rs  lib.rs  manifest.rs
crates/mc-rs-proto/: Cargo.toml
crates/mc-rs-proto/src/: batch.rs  codec.rs  compression.rs  error.rs  item_stack.rs  jwt.rs  lib.rs  types.rs
crates/mc-rs-proto/src/packets/: add_actor.rs  add_item_entity.rs  add_player.rs  animate.rs  available_commands.rs  available_entity_identifiers.rs  biome_definition_list.rs  block_actor_data.rs  boss_event.rs  change_dimension.rs  chunk_radius_updated.rs  client_to_server_handshake.rs  command_output.rs  command_request.rs  container_close.rs  container_open.rs  container_set_data.rs  crafting_data.rs  creative_content.rs  disconnect.rs  entity_event.rs  game_rules_changed.rs  inventory_content.rs  inventory_slot.rs  inventory_transaction.rs  item_registry.rs  item_stack_request.rs  item_stack_response.rs  level_chunk.rs  level_event.rs  login.rs  mob_effect.rs  mob_equipment.rs  mod.rs  modal_form_request.rs  modal_form_response.rs  move_actor_absolute.rs  move_player.rs  network_chunk_publisher_update.rs  network_settings.rs  (+33 more)
crates/mc-rs-raknet/: Cargo.toml
crates/mc-rs-raknet/src/: address.rs  codec.rs  (+8 more)
crates/mc-rs-server/: Cargo.toml  banned-ips.json  server.toml  whitelist.json
crates/mc-rs-server/src/: config.rs  connection.rs  main.rs  permissions.rs  persistence.rs  plugin_manager.rs  query.rs  rcon.rs
crates/mc-rs-server/src/connection/: combat.rs  commands.rs  inventory.rs  login.rs  mod.rs  movement.rs  plugins.rs  portal.rs  projectile.rs  spawn.rs  survival.rs  world_tick.rs
crates/mc-rs-world/: Cargo.toml
docs/: 05-world.md  07-gameplay.md  08-plugins.md  10-performance.md  11-rust-crates.md  12-roadmap.md  README.md  index.html  nav.js  search-data.js  search-index.json  search.js  style.css
docs/dev/: _config.yml  index.md
docs/pages/: architecture.html  commands.html  configuration.html  entities.html  gameplay.html  networking.html  overview.html  performance.html  plugins.html  protocol.html  security.html  world.html
docs_initial/: 01-overview.md  02-protocol.md  03-architecture.md  04-networking.md  05-world.md  06-entities.md  06-protocol-upgrade-notes.md  09-security.md  12-roadmap.md
(+41 files in other folders)
