[package]
name = "mc-rs-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
p384 = { workspace = true }
sha2 = { workspace = true }
aes = { workspace = true }
cfb8 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
