[package]
name = "mc-rs-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
flate2 = { workspace = true }
snap = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
